force-app/main/default/objects/custom_create157__c/custom_create157__c.object-meta.xml
<CustomObject>
    <label>Custom created object157</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects157</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>