force-app/main/default/objects/custom_create157__c/fields/custom_create_157field608__c.field-meta.xml
<CustomField>
    <fullName>custom_create_157field608__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 157field608</label>
    <type>Checkbox</type>
</CustomField>